parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT
    NEQ
    OR
    VOID

Grammar

Rule 0     S' -> main
Rule 1     main -> MAIN instrs END
Rule 2     instrs -> instrs instr
Rule 3     instrs -> instr
Rule 4     instr -> atr endline
Rule 5     instr -> write endline
Rule 6     instr -> read endline
Rule 7     instr -> endline
Rule 8     instr -> cond
Rule 9     instr -> cycle
Rule 10    instr -> lexpr
Rule 11    instr -> <empty>
Rule 12    endline -> ;
Rule 13    cond -> IF ( lexpr ) START instrs START ELSE START instrs END
Rule 14    cycle -> REPEATE START { instrs } UNTIL ( instrs ) END
Rule 15    write -> WRITE ID
Rule 16    write -> WRITE STR
Rule 17    atr -> ID = expr
Rule 18    read -> READ ID
Rule 19    lexpr -> lexpr AND lexpr
Rule 20    lexpr -> expr EQ expr
Rule 21    lexpr -> expr LE expr
Rule 22    lexpr -> expr GE expr
Rule 23    lexpr -> expr > expr
Rule 24    lexpr -> expr < expr
Rule 25    lexpr -> expr
Rule 26    lexpr -> ( lexpr )
Rule 27    expr -> expr + expr
Rule 28    expr -> expr - expr
Rule 29    expr -> term
Rule 30    term -> term * par
Rule 31    term -> term / par
Rule 32    term -> term % par
Rule 33    term -> term AND par
Rule 34    term -> par
Rule 35    par -> ( expr )
Rule 36    par -> NUM
Rule 37    par -> ID
Rule 38    par -> NOT lexpr

Terminals, with rules where they appear

%                    : 32
(                    : 13 14 26 35
)                    : 13 14 26 35
*                    : 30
+                    : 27
-                    : 28
/                    : 31
;                    : 12
<                    : 24
=                    : 17
>                    : 23
AND                  : 19 33
ELSE                 : 13
END                  : 1 13 14
EQ                   : 20
GE                   : 22
ID                   : 15 17 18 37
IF                   : 13
INT                  : 
LE                   : 21
MAIN                 : 1
NEQ                  : 
NOT                  : 38
NUM                  : 36
OR                   : 
READ                 : 18
REPEATE              : 14
START                : 13 13 13 14
STR                  : 16
UNTIL                : 14
VOID                 : 
WRITE                : 15 16
error                : 
{                    : 14
}                    : 14

Nonterminals, with rules where they appear

atr                  : 4
cond                 : 8
cycle                : 9
endline              : 4 5 6 7
expr                 : 17 20 20 21 21 22 22 23 23 24 24 25 27 27 28 28 35
instr                : 2 3
instrs               : 1 2 13 13 14 14
lexpr                : 10 13 19 19 26 38
main                 : 0
par                  : 30 31 32 33 34
read                 : 6
term                 : 29 30 31 32 33
write                : 5

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . MAIN instrs END

    MAIN            shift and go to state 2

    main                           shift and go to state 1

state 1

    (0) S' -> main .



state 2

    (1) main -> MAIN . instrs END
    (2) instrs -> . instrs instr
    (3) instrs -> . instr
    (4) instr -> . atr endline
    (5) instr -> . write endline
    (6) instr -> . read endline
    (7) instr -> . endline
    (8) instr -> . cond
    (9) instr -> . cycle
    (10) instr -> . lexpr
    (11) instr -> .
    (17) atr -> . ID = expr
    (15) write -> . WRITE ID
    (16) write -> . WRITE STR
    (18) read -> . READ ID
    (12) endline -> . ;
    (13) cond -> . IF ( lexpr ) START instrs START ELSE START instrs END
    (14) cycle -> . REPEATE START { instrs } UNTIL ( instrs ) END
    (19) lexpr -> . lexpr AND lexpr
    (20) lexpr -> . expr EQ expr
    (21) lexpr -> . expr LE expr
    (22) lexpr -> . expr GE expr
    (23) lexpr -> . expr > expr
    (24) lexpr -> . expr < expr
    (25) lexpr -> . expr
    (26) lexpr -> . ( lexpr )
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . term
    (30) term -> . term * par
    (31) term -> . term / par
    (32) term -> . term % par
    (33) term -> . term AND par
    (34) term -> . par
    (35) par -> . ( expr )
    (36) par -> . NUM
    (37) par -> . ID
    (38) par -> . NOT lexpr

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for ; resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for REPEATE resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    END             reduce using rule 11 (instr -> .)
    ID              shift and go to state 12
    WRITE           shift and go to state 14
    READ            shift and go to state 15
    ;               shift and go to state 16
    IF              shift and go to state 17
    REPEATE         shift and go to state 19
    (               shift and go to state 18
    NUM             shift and go to state 22
    NOT             shift and go to state 23

  ! ID              [ reduce using rule 11 (instr -> .) ]
  ! WRITE           [ reduce using rule 11 (instr -> .) ]
  ! READ            [ reduce using rule 11 (instr -> .) ]
  ! ;               [ reduce using rule 11 (instr -> .) ]
  ! IF              [ reduce using rule 11 (instr -> .) ]
  ! REPEATE         [ reduce using rule 11 (instr -> .) ]
  ! (               [ reduce using rule 11 (instr -> .) ]
  ! NUM             [ reduce using rule 11 (instr -> .) ]
  ! NOT             [ reduce using rule 11 (instr -> .) ]

    instrs                         shift and go to state 3
    instr                          shift and go to state 4
    atr                            shift and go to state 5
    endline                        shift and go to state 6
    write                          shift and go to state 7
    read                           shift and go to state 8
    cond                           shift and go to state 9
    cycle                          shift and go to state 10
    lexpr                          shift and go to state 11
    expr                           shift and go to state 13
    term                           shift and go to state 20
    par                            shift and go to state 21

state 3

    (1) main -> MAIN instrs . END
    (2) instrs -> instrs . instr
    (4) instr -> . atr endline
    (5) instr -> . write endline
    (6) instr -> . read endline
    (7) instr -> . endline
    (8) instr -> . cond
    (9) instr -> . cycle
    (10) instr -> . lexpr
    (11) instr -> .
    (17) atr -> . ID = expr
    (15) write -> . WRITE ID
    (16) write -> . WRITE STR
    (18) read -> . READ ID
    (12) endline -> . ;
    (13) cond -> . IF ( lexpr ) START instrs START ELSE START instrs END
    (14) cycle -> . REPEATE START { instrs } UNTIL ( instrs ) END
    (19) lexpr -> . lexpr AND lexpr
    (20) lexpr -> . expr EQ expr
    (21) lexpr -> . expr LE expr
    (22) lexpr -> . expr GE expr
    (23) lexpr -> . expr > expr
    (24) lexpr -> . expr < expr
    (25) lexpr -> . expr
    (26) lexpr -> . ( lexpr )
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . term
    (30) term -> . term * par
    (31) term -> . term / par
    (32) term -> . term % par
    (33) term -> . term AND par
    (34) term -> . par
    (35) par -> . ( expr )
    (36) par -> . NUM
    (37) par -> . ID
    (38) par -> . NOT lexpr

  ! shift/reduce conflict for END resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for ; resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for REPEATE resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    END             shift and go to state 24
    ID              shift and go to state 12
    WRITE           shift and go to state 14
    READ            shift and go to state 15
    ;               shift and go to state 16
    IF              shift and go to state 17
    REPEATE         shift and go to state 19
    (               shift and go to state 18
    NUM             shift and go to state 22
    NOT             shift and go to state 23

  ! END             [ reduce using rule 11 (instr -> .) ]
  ! ID              [ reduce using rule 11 (instr -> .) ]
  ! WRITE           [ reduce using rule 11 (instr -> .) ]
  ! READ            [ reduce using rule 11 (instr -> .) ]
  ! ;               [ reduce using rule 11 (instr -> .) ]
  ! IF              [ reduce using rule 11 (instr -> .) ]
  ! REPEATE         [ reduce using rule 11 (instr -> .) ]
  ! (               [ reduce using rule 11 (instr -> .) ]
  ! NUM             [ reduce using rule 11 (instr -> .) ]
  ! NOT             [ reduce using rule 11 (instr -> .) ]

    instr                          shift and go to state 25
    atr                            shift and go to state 5
    endline                        shift and go to state 6
    write                          shift and go to state 7
    read                           shift and go to state 8
    cond                           shift and go to state 9
    cycle                          shift and go to state 10
    lexpr                          shift and go to state 11
    expr                           shift and go to state 13
    term                           shift and go to state 20
    par                            shift and go to state 21

state 4

    (3) instrs -> instr .

    END             reduce using rule 3 (instrs -> instr .)
    ID              reduce using rule 3 (instrs -> instr .)
    WRITE           reduce using rule 3 (instrs -> instr .)
    READ            reduce using rule 3 (instrs -> instr .)
    ;               reduce using rule 3 (instrs -> instr .)
    IF              reduce using rule 3 (instrs -> instr .)
    REPEATE         reduce using rule 3 (instrs -> instr .)
    (               reduce using rule 3 (instrs -> instr .)
    NUM             reduce using rule 3 (instrs -> instr .)
    NOT             reduce using rule 3 (instrs -> instr .)
    }               reduce using rule 3 (instrs -> instr .)
    START           reduce using rule 3 (instrs -> instr .)
    )               reduce using rule 3 (instrs -> instr .)


state 5

    (4) instr -> atr . endline
    (12) endline -> . ;

    ;               shift and go to state 16

    endline                        shift and go to state 26

state 6

    (7) instr -> endline .

    END             reduce using rule 7 (instr -> endline .)
    ID              reduce using rule 7 (instr -> endline .)
    WRITE           reduce using rule 7 (instr -> endline .)
    READ            reduce using rule 7 (instr -> endline .)
    ;               reduce using rule 7 (instr -> endline .)
    IF              reduce using rule 7 (instr -> endline .)
    REPEATE         reduce using rule 7 (instr -> endline .)
    (               reduce using rule 7 (instr -> endline .)
    NUM             reduce using rule 7 (instr -> endline .)
    NOT             reduce using rule 7 (instr -> endline .)
    }               reduce using rule 7 (instr -> endline .)
    START           reduce using rule 7 (instr -> endline .)
    )               reduce using rule 7 (instr -> endline .)


state 7

    (5) instr -> write . endline
    (12) endline -> . ;

    ;               shift and go to state 16

    endline                        shift and go to state 27

state 8

    (6) instr -> read . endline
    (12) endline -> . ;

    ;               shift and go to state 16

    endline                        shift and go to state 28

state 9

    (8) instr -> cond .

    END             reduce using rule 8 (instr -> cond .)
    ID              reduce using rule 8 (instr -> cond .)
    WRITE           reduce using rule 8 (instr -> cond .)
    READ            reduce using rule 8 (instr -> cond .)
    ;               reduce using rule 8 (instr -> cond .)
    IF              reduce using rule 8 (instr -> cond .)
    REPEATE         reduce using rule 8 (instr -> cond .)
    (               reduce using rule 8 (instr -> cond .)
    NUM             reduce using rule 8 (instr -> cond .)
    NOT             reduce using rule 8 (instr -> cond .)
    }               reduce using rule 8 (instr -> cond .)
    START           reduce using rule 8 (instr -> cond .)
    )               reduce using rule 8 (instr -> cond .)


state 10

    (9) instr -> cycle .

    END             reduce using rule 9 (instr -> cycle .)
    ID              reduce using rule 9 (instr -> cycle .)
    WRITE           reduce using rule 9 (instr -> cycle .)
    READ            reduce using rule 9 (instr -> cycle .)
    ;               reduce using rule 9 (instr -> cycle .)
    IF              reduce using rule 9 (instr -> cycle .)
    REPEATE         reduce using rule 9 (instr -> cycle .)
    (               reduce using rule 9 (instr -> cycle .)
    NUM             reduce using rule 9 (instr -> cycle .)
    NOT             reduce using rule 9 (instr -> cycle .)
    }               reduce using rule 9 (instr -> cycle .)
    START           reduce using rule 9 (instr -> cycle .)
    )               reduce using rule 9 (instr -> cycle .)


state 11

    (10) instr -> lexpr .
    (19) lexpr -> lexpr . AND lexpr

    END             reduce using rule 10 (instr -> lexpr .)
    ID              reduce using rule 10 (instr -> lexpr .)
    WRITE           reduce using rule 10 (instr -> lexpr .)
    READ            reduce using rule 10 (instr -> lexpr .)
    ;               reduce using rule 10 (instr -> lexpr .)
    IF              reduce using rule 10 (instr -> lexpr .)
    REPEATE         reduce using rule 10 (instr -> lexpr .)
    (               reduce using rule 10 (instr -> lexpr .)
    NUM             reduce using rule 10 (instr -> lexpr .)
    NOT             reduce using rule 10 (instr -> lexpr .)
    }               reduce using rule 10 (instr -> lexpr .)
    START           reduce using rule 10 (instr -> lexpr .)
    )               reduce using rule 10 (instr -> lexpr .)
    AND             shift and go to state 29


state 12

    (17) atr -> ID . = expr
    (37) par -> ID .

    =               shift and go to state 30
    *               reduce using rule 37 (par -> ID .)
    /               reduce using rule 37 (par -> ID .)
    %               reduce using rule 37 (par -> ID .)
    AND             reduce using rule 37 (par -> ID .)
    EQ              reduce using rule 37 (par -> ID .)
    LE              reduce using rule 37 (par -> ID .)
    GE              reduce using rule 37 (par -> ID .)
    >               reduce using rule 37 (par -> ID .)
    <               reduce using rule 37 (par -> ID .)
    +               reduce using rule 37 (par -> ID .)
    -               reduce using rule 37 (par -> ID .)
    END             reduce using rule 37 (par -> ID .)
    ID              reduce using rule 37 (par -> ID .)
    WRITE           reduce using rule 37 (par -> ID .)
    READ            reduce using rule 37 (par -> ID .)
    ;               reduce using rule 37 (par -> ID .)
    IF              reduce using rule 37 (par -> ID .)
    REPEATE         reduce using rule 37 (par -> ID .)
    (               reduce using rule 37 (par -> ID .)
    NUM             reduce using rule 37 (par -> ID .)
    NOT             reduce using rule 37 (par -> ID .)
    }               reduce using rule 37 (par -> ID .)
    START           reduce using rule 37 (par -> ID .)
    )               reduce using rule 37 (par -> ID .)


state 13

    (20) lexpr -> expr . EQ expr
    (21) lexpr -> expr . LE expr
    (22) lexpr -> expr . GE expr
    (23) lexpr -> expr . > expr
    (24) lexpr -> expr . < expr
    (25) lexpr -> expr .
    (27) expr -> expr . + expr
    (28) expr -> expr . - expr

  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for > resolved as shift
  ! shift/reduce conflict for < resolved as shift
  ! shift/reduce conflict for + resolved as shift
  ! shift/reduce conflict for - resolved as shift
    EQ              shift and go to state 31
    LE              shift and go to state 32
    GE              shift and go to state 33
    >               shift and go to state 34
    <               shift and go to state 35
    AND             reduce using rule 25 (lexpr -> expr .)
    END             reduce using rule 25 (lexpr -> expr .)
    ID              reduce using rule 25 (lexpr -> expr .)
    WRITE           reduce using rule 25 (lexpr -> expr .)
    READ            reduce using rule 25 (lexpr -> expr .)
    ;               reduce using rule 25 (lexpr -> expr .)
    IF              reduce using rule 25 (lexpr -> expr .)
    REPEATE         reduce using rule 25 (lexpr -> expr .)
    (               reduce using rule 25 (lexpr -> expr .)
    NUM             reduce using rule 25 (lexpr -> expr .)
    NOT             reduce using rule 25 (lexpr -> expr .)
    *               reduce using rule 25 (lexpr -> expr .)
    /               reduce using rule 25 (lexpr -> expr .)
    %               reduce using rule 25 (lexpr -> expr .)
    )               reduce using rule 25 (lexpr -> expr .)
    }               reduce using rule 25 (lexpr -> expr .)
    START           reduce using rule 25 (lexpr -> expr .)
    +               shift and go to state 36
    -               shift and go to state 37

  ! EQ              [ reduce using rule 25 (lexpr -> expr .) ]
  ! LE              [ reduce using rule 25 (lexpr -> expr .) ]
  ! GE              [ reduce using rule 25 (lexpr -> expr .) ]
  ! >               [ reduce using rule 25 (lexpr -> expr .) ]
  ! <               [ reduce using rule 25 (lexpr -> expr .) ]
  ! +               [ reduce using rule 25 (lexpr -> expr .) ]
  ! -               [ reduce using rule 25 (lexpr -> expr .) ]


state 14

    (15) write -> WRITE . ID
    (16) write -> WRITE . STR

    ID              shift and go to state 38
    STR             shift and go to state 39


state 15

    (18) read -> READ . ID

    ID              shift and go to state 40


state 16

    (12) endline -> ; .

    END             reduce using rule 12 (endline -> ; .)
    ID              reduce using rule 12 (endline -> ; .)
    WRITE           reduce using rule 12 (endline -> ; .)
    READ            reduce using rule 12 (endline -> ; .)
    ;               reduce using rule 12 (endline -> ; .)
    IF              reduce using rule 12 (endline -> ; .)
    REPEATE         reduce using rule 12 (endline -> ; .)
    (               reduce using rule 12 (endline -> ; .)
    NUM             reduce using rule 12 (endline -> ; .)
    NOT             reduce using rule 12 (endline -> ; .)
    }               reduce using rule 12 (endline -> ; .)
    START           reduce using rule 12 (endline -> ; .)
    )               reduce using rule 12 (endline -> ; .)


state 17

    (13) cond -> IF . ( lexpr ) START instrs START ELSE START instrs END

    (               shift and go to state 41


state 18

    (26) lexpr -> ( . lexpr )
    (35) par -> ( . expr )
    (19) lexpr -> . lexpr AND lexpr
    (20) lexpr -> . expr EQ expr
    (21) lexpr -> . expr LE expr
    (22) lexpr -> . expr GE expr
    (23) lexpr -> . expr > expr
    (24) lexpr -> . expr < expr
    (25) lexpr -> . expr
    (26) lexpr -> . ( lexpr )
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . term
    (30) term -> . term * par
    (31) term -> . term / par
    (32) term -> . term % par
    (33) term -> . term AND par
    (34) term -> . par
    (35) par -> . ( expr )
    (36) par -> . NUM
    (37) par -> . ID
    (38) par -> . NOT lexpr

    (               shift and go to state 18
    NUM             shift and go to state 22
    ID              shift and go to state 44
    NOT             shift and go to state 23

    lexpr                          shift and go to state 42
    expr                           shift and go to state 43
    term                           shift and go to state 20
    par                            shift and go to state 21

state 19

    (14) cycle -> REPEATE . START { instrs } UNTIL ( instrs ) END

    START           shift and go to state 45


state 20

    (29) expr -> term .
    (30) term -> term . * par
    (31) term -> term . / par
    (32) term -> term . % par
    (33) term -> term . AND par

  ! shift/reduce conflict for * resolved as shift
  ! shift/reduce conflict for / resolved as shift
  ! shift/reduce conflict for % resolved as shift
  ! shift/reduce conflict for AND resolved as shift
    EQ              reduce using rule 29 (expr -> term .)
    LE              reduce using rule 29 (expr -> term .)
    GE              reduce using rule 29 (expr -> term .)
    >               reduce using rule 29 (expr -> term .)
    <               reduce using rule 29 (expr -> term .)
    +               reduce using rule 29 (expr -> term .)
    -               reduce using rule 29 (expr -> term .)
    END             reduce using rule 29 (expr -> term .)
    ID              reduce using rule 29 (expr -> term .)
    WRITE           reduce using rule 29 (expr -> term .)
    READ            reduce using rule 29 (expr -> term .)
    ;               reduce using rule 29 (expr -> term .)
    IF              reduce using rule 29 (expr -> term .)
    REPEATE         reduce using rule 29 (expr -> term .)
    (               reduce using rule 29 (expr -> term .)
    NUM             reduce using rule 29 (expr -> term .)
    NOT             reduce using rule 29 (expr -> term .)
    )               reduce using rule 29 (expr -> term .)
    }               reduce using rule 29 (expr -> term .)
    START           reduce using rule 29 (expr -> term .)
    *               shift and go to state 46
    /               shift and go to state 47
    %               shift and go to state 48
    AND             shift and go to state 49

  ! AND             [ reduce using rule 29 (expr -> term .) ]
  ! *               [ reduce using rule 29 (expr -> term .) ]
  ! /               [ reduce using rule 29 (expr -> term .) ]
  ! %               [ reduce using rule 29 (expr -> term .) ]


state 21

    (34) term -> par .

    *               reduce using rule 34 (term -> par .)
    /               reduce using rule 34 (term -> par .)
    %               reduce using rule 34 (term -> par .)
    AND             reduce using rule 34 (term -> par .)
    EQ              reduce using rule 34 (term -> par .)
    LE              reduce using rule 34 (term -> par .)
    GE              reduce using rule 34 (term -> par .)
    >               reduce using rule 34 (term -> par .)
    <               reduce using rule 34 (term -> par .)
    +               reduce using rule 34 (term -> par .)
    -               reduce using rule 34 (term -> par .)
    END             reduce using rule 34 (term -> par .)
    ID              reduce using rule 34 (term -> par .)
    WRITE           reduce using rule 34 (term -> par .)
    READ            reduce using rule 34 (term -> par .)
    ;               reduce using rule 34 (term -> par .)
    IF              reduce using rule 34 (term -> par .)
    REPEATE         reduce using rule 34 (term -> par .)
    (               reduce using rule 34 (term -> par .)
    NUM             reduce using rule 34 (term -> par .)
    NOT             reduce using rule 34 (term -> par .)
    )               reduce using rule 34 (term -> par .)
    }               reduce using rule 34 (term -> par .)
    START           reduce using rule 34 (term -> par .)


state 22

    (36) par -> NUM .

    *               reduce using rule 36 (par -> NUM .)
    /               reduce using rule 36 (par -> NUM .)
    %               reduce using rule 36 (par -> NUM .)
    AND             reduce using rule 36 (par -> NUM .)
    EQ              reduce using rule 36 (par -> NUM .)
    LE              reduce using rule 36 (par -> NUM .)
    GE              reduce using rule 36 (par -> NUM .)
    >               reduce using rule 36 (par -> NUM .)
    <               reduce using rule 36 (par -> NUM .)
    +               reduce using rule 36 (par -> NUM .)
    -               reduce using rule 36 (par -> NUM .)
    END             reduce using rule 36 (par -> NUM .)
    ID              reduce using rule 36 (par -> NUM .)
    WRITE           reduce using rule 36 (par -> NUM .)
    READ            reduce using rule 36 (par -> NUM .)
    ;               reduce using rule 36 (par -> NUM .)
    IF              reduce using rule 36 (par -> NUM .)
    REPEATE         reduce using rule 36 (par -> NUM .)
    (               reduce using rule 36 (par -> NUM .)
    NUM             reduce using rule 36 (par -> NUM .)
    NOT             reduce using rule 36 (par -> NUM .)
    )               reduce using rule 36 (par -> NUM .)
    }               reduce using rule 36 (par -> NUM .)
    START           reduce using rule 36 (par -> NUM .)


state 23

    (38) par -> NOT . lexpr
    (19) lexpr -> . lexpr AND lexpr
    (20) lexpr -> . expr EQ expr
    (21) lexpr -> . expr LE expr
    (22) lexpr -> . expr GE expr
    (23) lexpr -> . expr > expr
    (24) lexpr -> . expr < expr
    (25) lexpr -> . expr
    (26) lexpr -> . ( lexpr )
    (27) expr -> . expr + expr
    (28) expr -> . expr - expr
    (29) expr -> . term
    (30) term -> . term * par
    (31) term -> . term / par
    (32) term -> . term % par
    (33) term -> . term AND par
    (34) term -> . par
    (35) par -> . ( expr )
    (36) par -> . NUM
    (37) par -> . ID
    (38) par -> . NOT lexpr

    (               shift and go to state 18
    NUM             shift and go to state 22
    ID              shift and go to state 44
    NOT             shift and go to state 23

    lexpr                          shift and go to state 50
    expr                           shift and go to state 13
    term                           shift and go to state 20
    par                            shift and go to state 21

state 24

    (1) main -> MAIN instrs END .

    $end            reduce using rule 1 (main -> MAIN instrs END .)


state 25

    (2) instrs -> instrs instr .

    END             reduce using rule 2 (instrs -> instrs instr .)
    ID              reduce using rule 2 (instrs -> instrs instr .)
    WRITE           reduce using rule 2 (instrs -> instrs instr .)
    READ            reduce using rule 2 (instrs -> instrs instr .)
    ;               reduce using rule 2 (instrs -> instrs instr .)
    IF              reduce using rule 2 (instrs -> instrs instr .)
    REPEATE         reduce using rule 2 (instrs -> instrs instr .)
    (               reduce using rule 2 (instrs -> instrs instr .)
    NUM             reduce using rule 2 (instrs -> instrs instr .)
    NOT             reduce using rule 2 (instrs -> instrs instr .)
    }               reduce using rule 2 (instrs -> instrs instr .)
    START           reduce using rule 2 (instrs -> instrs instr .)
    )               reduce using rule 2 (instrs -> instrs instr .)


state 26

    (4) instr -> atr endline .

    END             reduce using rule 4 (instr -> atr endline .)
    ID              reduce using rule 4 (instr -> atr endline .)
    WRITE           reduce using rule 4 (instr -> atr endline .)
    READ            reduce using rule 4 (instr -> atr endline .)
    ;               reduce using rule 4 (instr -> atr endline .)
    IF              reduce using rule 4 (instr -> atr endline .)
    REPEATE         reduce using rule 4 (instr -> atr endline .)
    (               reduce using rule 4 (instr -> atr endline .)
    NUM             reduce using rule 4 (instr -> atr endline .)
    NOT             reduce using rule 4 (instr -> atr endline .)
    }               reduce using rule 4 (instr -> atr endline .)
    START           reduce using rule 4 (instr -> atr endline .)
    )               reduce using rule 4 (instr -> atr endline .)


state 27

    (5) instr -> write endline .

    END             reduce using rule 5 (instr -> write endline .)
    ID              reduce using rule 5 (instr -> write endline .)
    WRITE           reduce using rule 5 (instr -> write endline .)
    READ            reduce using rule 5 (instr -> write endline .)
    ;               reduce using rule 5 (instr -> write endline .)
    IF              reduce using rule 5 (instr -> write endline .)
    REPEATE         reduce using rule 5 (instr -> write endline .)
    (               reduce using rule 5 (instr -> write endline .)
    NUM             reduce using rule 5 (instr -> write endline .)
    NOT             reduce using rule 5 (instr -> write endline .)
    }               reduce using rule 5 (instr -> write endline .)
    START           reduce using rule 5 (instr -> write endline .)
    )               reduce using rule 5 (instr -> write endline .)


state 28

    (6) instr -> read endline .
